--- a/wrkFlwArthurSchnitzlerBriefe.yaml
+++ b/wrkFlwArthurSchnitzlerBriefe.yaml
@@ -5,17 +5,19 @@ docTitle: Workflow Arthur Schnitzler Briefe
 keyProjectNameLabel: wroACDHitp202003
 keyProjectName: ACDH and CH Internship 2020 WRO 
 docAuthor: Walter Obweger
+docTwitter: '@wobweger'
+docInitial: 'wro'
 docReview0: Martin Anton Mueller
 docReview1:
 docReview2: 
 docApproved:
 docID: wroACDHitp202003-WrkFlW-001
-docGrp0: ''
-docGrp1: ''
-docGrp2: ''
+docGrp0: 'wro ACDH and CH'
+docGrp1: 'internship 2020 / 03'
+docGrp2: 'Workflow'
 docClassification: CC-by
 docCreate: 2020-08-05
-docRevision: V00.00
+docRevision: V00.01
 docStatus: PreDraft
-docChangeDate: 2020-08-05
+docChangeDate: 2020-08-21
 ---
